--- a/crates/txpool/Cargo.toml
+++ b/crates/txpool/Cargo.toml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 [package]
-name = "consensus"
+name = "txpool"
 version = "1.0.0-alpha"
 authors = ["Karim Agha <karim.agha@gnosis.io>"]
 edition = "2018"
@@ -10,7 +10,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#dev = { path = "./../dev/" }
-#aura = { path = "./aura/" }
-#clique = { path = "./clique/" }
-#ethash = { path = "./ethash/" }
+core = { path = "../core" }
