--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -17,4 +17,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 keccak-hash = "0.7.0"
 rlp = "0.5.0"
+rustc-hex = "2.1.0"
+bytes = "1"
 crypto = { version="0.8.0", package = "parity-crypto", features=["publickey"] }
