--- a/crates/serde-rlp/Cargo.toml
+++ b/crates/serde-rlp/Cargo.toml
@@ -12,3 +12,6 @@ edition = "2018"
 [dependencies]
 rlp = "0.5.0"
 serde = { version = "1.0", features = ["derive"] }
+
+[dev-dependencies]
+hex-literal = "0.3.1"
