--- a/bin/reth/Cargo.toml
+++ b/bin/reth/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-core = { path = "../../crates/core" }
+core = { path = "../../crates/core", package="reth-core" }
 execution = { path = "../../crates/importer" }
 networking = { path = "../../crates/networking" }
 storage = { path = "../../crates/storage" }
