--- a/crates/interfaces/Cargo.toml
+++ b/crates/interfaces/Cargo.toml
@@ -9,5 +9,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-core = { path = "../core" }
-tokio = { version = "1.2", features = ["full"] }
+core = { path = "../core", package="reth-core" }
+ethereum-forkid = "0.5"
