--- a/crates/networking/Cargo.toml
+++ b/crates/networking/Cargo.toml
@@ -10,4 +10,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-core = { path = "../core" }
+core = { path = "../core", package="reth-core" }
