--- a/crates/scheduler/Cargo.toml
+++ b/crates/scheduler/Cargo.toml
@@ -10,12 +10,13 @@ homepage = "https://github.com/gnosis/reth-scheduler"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ethereum-forkid = "0.3"
-num = "0.3"
+ethereum-forkid = "0.5"
+num = "0.4"
 num-derive = "0.3"
 num-traits = "0.2"
-primitive-types = {version = "0.7.3", features = ["impl-rlp"]}
-rlp = "0.4"
+rlp = "0.5"
 rlp-derive = "0.1.0"
 log = "0.4"
 simple_logger = "1.11"
+interfaces = { path = "../interfaces", package="reth-interfaces"}
+core = { path = "../core", package="reth-core"}
