--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -15,6 +15,7 @@ edition = "2018"
 ethereum-types = "0.11.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde-rlp = { path = "../serde-rlp" }
 keccak-hash = "0.7.0"
 rlp = "0.5.0"
 rustc-hex = "2.1.0"
