--- a/crates/util/Cargo.toml
+++ b/crates/util/Cargo.toml
@@ -3,11 +3,10 @@
 
 [package]
 name = "reth-util"
-version = "1.0.0-alpha"
-authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
+version = "0.1.0"
+license = "Apache-2.0"
+description = "Utility library made for ethereum blockchain client."
+authors = ["draganrakita <dragan.rakita@gnosis.io>"]
+readme = "README.md"
+homepage = ""
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-core = { path = "../core", package="reth-core" }
