--- a/crates/scheduler/Cargo.toml
+++ b/crates/scheduler/Cargo.toml
@@ -12,6 +12,7 @@ homepage = "https://github.com/gnosis/reth-scheduler"
 [dependencies]
 ethereum-forkid = "0.5"
 num = "0.4"
+keccak-hash = "0.5.0"
 num-derive = "0.3"
 num-traits = "0.2"
 rlp = "0.5"
