--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 # Copyright 2021 Gnosis Ltd.
 # SPDX-License-Identifier: Apache-2.0
 
+cargo-features = ["resolver"]
+
 [workspace]
+resolver = "2"
 members = [
     "crates/*",
     "tools/*",
