--- a/bin/reth/Cargo.toml
+++ b/bin/reth/Cargo.toml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 [package]
-name = "oe"
+name = "reth"
 version = "1.0.0-alpha"
 authors = ["Karim Agha <karim.agha@gnosis.io>"]
 edition = "2018"
@@ -10,7 +10,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-core = { path = "../../crates/core", package="reth-core" }
+core ={ path = "../../crates/core", package="reth-core" }
 execution = { path = "../../crates/importer" }
 networking = { path = "../../crates/networking" }
 storage = { path = "../../crates/storage" }
