--- a/crates/interfaces/Cargo.toml
+++ b/crates/interfaces/Cargo.toml
@@ -6,8 +6,19 @@ name = "reth-interfaces"
 version = "0.0.1"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+test_only = []
+default = []
 
 [dependencies]
-core = { path = "../core", package="reth-core" }
+reth-core ={ path = "../core", package="reth-core" }
+async-trait = "0.1"
 ethereum-forkid = "0.5"
+futures = "0.3"
+anyhow = "1.0"
+rlp = "0.5"
+parking_lot = "0.11"
+
+
+[dev-dependencies]
+reth-core ={ path = "../core", package="reth-core", features=["test_only"]}
