--- a/crates/txpool/Cargo.toml
+++ b/crates/txpool/Cargo.toml
@@ -23,6 +23,8 @@ serde = { version = "1", features = ["derive"] }
 toml = "0.5"
 log = "0.4"
 parking_lot = "0.11"
+rlp = "0.5.0"
+bytes = "1"
 
 [dev-dependencies]
 # override core and enable test_only flag for functionalities related to tests.
