--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -4,7 +4,7 @@
 [package]
 name = "reth-core"
 version = "1.0.0-alpha"
-authors = ["Karim Agha <karim.agha@gnosis.io>"]
+authors = ["Dragan Rakita <dragan0rakita@gmail.com", "Karim Agha <karim.agha@gnosis.io>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
